# BtS-2024-Writeups

./: README.md
crypto/backup/challenge/: flag
crypto/backup/writeup/: README.md  solve.py
crypto/breaching_the_crime_scene/: README.md
crypto/breaching_the_crime_scene/challenge/: Dockerfile  ca.crt  ca.key  ca.srl  flag  requirements.txt  run.sh
crypto/breaching_the_crime_scene/writeup/: README.md  solve.py
crypto/i_made_the_otp/: README.md
crypto/i_made_the_otp/challenge/: flag
crypto/i_made_the_otp/writeup/: README.md  healthcheck.py
crypto/leaky_prime/challenge/: Dockerfile  flag  secret.py
crypto/leaky_prime/writeup/: README.md  healthcheck.py
crypto/letter/challenge/: flag  letter.py
crypto/letter/writeup/: README.md  (+1 more)
crypto/xor_img/: README.md
forensics/free_flag/: README.md
misc/broken-image/: README.md
misc/looking_glass/: README.md
misc/mod_ari/: README.md
misc/object_dec/: README.md
misc/super_secret_data/: README.md
misc/terminal/: README.md
osint/alphonso/: README.md
pwn/cap/: README.md
pwn/chroot_jail/: README.md
pwn/flag_reader/: README.md
re/back_to_the_future/: README.md
re/little_rusty/: README.md
re/login_page/: README.md
re/login_page/challenge/: Cargo.toml  flag.txt  index.html
re/login_page/challenge/src/: app.rs  lib.rs  login_page.rs  main.rs
re/logs/: README.md
re/nologs/: README.md
stegano/meme/: README.md
stegano/music_store/: README.md
stegano/rolling_in_the_rick/: README.md
stegano/walls/: README.md
web/asteroid/: README.md
web/flag-report/: README.md
web/mango/: README.md
(+172 files in other folders)
