[package]
name = "login_page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
iced = { version ="0.12", features = ["image", "debug", "tokio"] }
serde_json = "1.0.117"


[dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
